--- a/src/app/Components/slider/style.css
+++ b/src/app/Components/slider/style.css
@@ -3,6 +3,7 @@
 }
 * {
   box-sizing: border-box;
+  padding: 0;
 }
 html,
 body {
@@ -10,15 +11,13 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-
   top: 0;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
   background: #eee;
 }
-.swiper-wrapper {
-}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -34,7 +33,6 @@ body {
   align-items: center;
   overflow: hidden;
   transition: opacity 800ms ease-in;
- 
 }
 
 .swiper-slide img {
@@ -54,17 +52,17 @@ body {
   bottom: 0;
   width: 100%;
   height: 100px;
-  margin: 27px 12px;
   z-index: 1;
+  margin-bottom: 27px;
 }
-
+.swiper-wrapper {
+  padding:0px 12px ;
+}
 .mySwiper .swiper-slide {
   width: 130px !important;
   height: 98% !important;
-  opacity: 0.4;
-  border: 1px solid #aee9ff;
-  border-radius: 12px;
-  object-fit: cover;
+  background-color: rgba(0,0,0,0);
+  overflow: hidden;
   border-radius: 12px;
 }
 
@@ -78,4 +76,5 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  box-shadow: 0px 2.284px 15.986px 0px rgba(174, 233, 255, 0.25);
 }
