--- a/src/app/Components/slider/style.css
+++ b/src/app/Components/slider/style.css
@@ -19,9 +19,7 @@ body {
 }
 
 .swiper {
-  width: 100%;
-  height: 100%;
-  position: relative;
+  margin: 0px;
 }
 
 .swiper-slide {
@@ -32,7 +30,7 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  transition: opacity 800ms ease-in;
+  transition: opacity 300ms ease-in;
 }
 
 .swiper-slide img {
@@ -48,24 +46,62 @@ body {
 }
 
 .mySwiper {
-  position: absolute;
   bottom: 0;
-  width: 100%;
+  display: inline-block;
+  width: auto;
   height: 100px;
   z-index: 1;
-  margin-bottom: 27px;
+}
+@media screen and (max-width: 600px) {
+  .mySwiper {
+    height: 100px;
+  }
+}
+
+/* Media query for screens between 601px and 900px width */
+@media screen and (min-width: 601px) and (max-width: 900px) {
+  .mySwiper {
+    height: 148px;
+  }
+}
+
+/* Media query for screens 901px and above */
+@media screen and (min-width: 901px) {
+  .mySwiper {
+    height: 219px;
+  }
 }
 .swiper-wrapper {
-  padding:0px 12px ;
+  padding: "0px 0px 0px 12px";
 }
 .mySwiper .swiper-slide {
-  width: 130px !important;
+  /* width: 130px !important; */
   height: 98% !important;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   overflow: hidden;
   border-radius: 12px;
 }
 
+/* Styles for screens up to 600px width */
+@media screen and (max-width: 600px) {
+  .mySwiper .swiper-slide {
+    width: 130px !important;
+  }
+}
+
+/* Styles for screens between 601px and 900px width */
+@media screen and (min-width: 601px) and (max-width: 900px) {
+  .mySwiper .swiper-slide {
+    width: 193px !important;
+  }
+}
+
+/* Styles for screens 901px and above */
+@media screen and (min-width: 901px) {
+  .mySwiper .swiper-slide {
+    width: 286px !important;
+  }
+}
 .mySwiper .swiper-slide-thumb-active {
   opacity: 1;
 }
